feat: 使用中间件代理 API 请求
- 移除 config.js 中的硬编码后端 URL
- 新增 middleware.js 文件，实现请求代理功能
- 更新 vercel.json，移除原有的 API 请求重写规则

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,9 @@
 
+
 {
   "rewrites": [
     
-    {
-      "source": "/api/:match*",
-      "destination": "YOUR_BACKEND_API_BASE_URL/:match*" 
-    }
-    
-  ],
-  "cleanUrls": true,    
-  "trailingSlash": false 
+    { "source": "/((?!api/).*)", "destination": "/index.html" }
+  ]
+  
 }
