build: 移除中间件并使用 Vercel 重写配置
- 删除了 middleware.js 文件，简化了项目结构
- 在 vercel.json 中添加了重写配置，直接将 /api/ 路径的请求重定向到后端服务
- 这种方法减少了代码复杂性，并且不需要在中间件中手动处理请求头转发等问题

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,18 @@
-
-
 {
+  "env": {
+    "PRIVATE_BACKEND_API_URL": "@private_backend_api_url"
+  },
   "rewrites": [
+    {
+      "source": "/api/:match*",
+      
+      "destination": "{{PRIVATE_BACKEND_API_URL}}/api/:match*"
+      
+    },
     
-    { "source": "/((?!api/).*)", "destination": "/index.html" }
+    {
+      "source": "/((?!api/).*)",
+      "destination": "/index.html"
+    }
   ]
-  
 }
