build(deploy): 更新后端 API 地址并调整 Vercel 配置
- 将 config.js 中的 backendUrl 修改为实际的后端 API 地址
- 重写 vercel.json 中的 API 路由规则
- 移除环境变量 PRIVATE_BACKEND_API_URL

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,13 @@
+
 {
-  "env": {
-    "PRIVATE_BACKEND_API_URL": "@private_backend_api_url"
-  },
   "rewrites": [
-    {
-      "source": "/api/:match*",
-      
-      "destination": "{{PRIVATE_BACKEND_API_URL}}/api/:match*"
-      
-    },
     
     {
-      "source": "/((?!api/).*)",
-      "destination": "/index.html"
+      "source": "/api/:match*",
+      "destination": "YOUR_BACKEND_API_BASE_URL/:match*" 
     }
-  ]
+    
+  ],
+  "cleanUrls": true,    
+  "trailingSlash": false 
 }
