refactor(config): 更新 backendUrl 并配置 Vercel 重写规则
- 将 config.js 中的 backendUrl 修改为相对路径 '/api'
- 更新 vercel.json 中的重写规则，使用环境变量替代硬编码的 API 地址
- 移除多余的空行和格式设置，提高代码可读性

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,11 @@
-
 {
   "rewrites": [
-    
     {
       "source": "/api/:match*",
-      "destination": "YOUR_BACKEND_API_BASE_URL/:match*" 
+      
+      "destination": "${ACTUAL_BACKEND_URL}/:match*"
     }
-    
   ],
-  "cleanUrls": true,    
-  "trailingSlash": false 
+  "cleanUrls": true,
+  "trailingSlash": false
 }
