feat(vercel): 添加测试重写规则
- 在 vercel.json 中添加了新的重写规则
- 将 /api/test-rewrite 请求重定向到 https://www.google.com

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,11 @@
 {
   "rewrites": [
     {
+      "source": "/api/test-rewrite",
+      "destination": "https://www.google.com"
+    },
+    {
       "source": "/api/:match*",
-      
       "destination": "${ACTUAL_BACKEND_URL}/:match*"
     }
   ],
