config(vercel): 更新 Vercel 配置文件
- 移除 API 重写规则
- 添加全局请求头
- 保持 cleanUrls 和 trailingSlash 设置不变

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,16 @@
 {
-  "rewrites": [
+  "headers": [
     {
-      "source": "/api/test-rewrite",
-      "destination": "https://www.google.com"
-    },
-    {
-      "source": "/api/:match*",
-      "destination": "${ACTUAL_BACKEND_URL}/:match*"
+      "source": "/(.*)", 
+      "headers": [
+        {
+          "key": "X-Vercel-Test-Header",
+          "value": "MyCustomHeaderValue"
+        }
+      ]
     }
   ],
+  
   "cleanUrls": true,
   "trailingSlash": false
 }
