--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
 {
-  "headers": [
+ 
+  "rewrites": [
     {
-      "source": "/(.*)", 
-      "headers": [
-        {
-          "key": "X-Vercel-Test-Header",
-          "value": "MyCustomHeaderValue"
-        }
-      ]
+      "source": "/api/check-env", 
+      
+      "destination": "https://this-is-a-test.example.com/env_value_is_${ACTUAL_BACKEND_URL}/somepath"
+    },
+    { 
+      "source": "/api/:match*",
+      "destination": "${ACTUAL_BACKEND_URL}/:match*"
     }
-  ],
+  ]
   
-  "cleanUrls": true,
-  "trailingSlash": false
 }
