refactor(vercel): 更新 API 重写规则
- 移除了 /api/check-env 路径的重写规则
- 重构了 /api/:match* 路径的重写规则，改为更具体的 /api/httpbin-test/:path*
- 更新了目标 URL，使用 https://httpbin.org/anything/test-path-segment/:path*?original_env=${ACTUAL_BACKEND_URL}
- 优化了 JSON 文件格式，删除了多余的空行和缩进

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 {
- 
   "rewrites": [
     {
-      "source": "/api/check-env", 
-      
-      "destination": "https://this-is-a-test.example.com/env_value_is_${ACTUAL_BACKEND_URL}/somepath"
-    },
-    { 
-      "source": "/api/:match*",
-      "destination": "${ACTUAL_BACKEND_URL}/:match*"
+      "source": "/api/httpbin-test/:path*",
+      "destination": "https://httpbin.org/anything/test-path-segment/:path*?original_env=${ACTUAL_BACKEND_URL}"
     }
   ]
-  
 }
