ci(vercel): 更新 Vercel 配置文件
- 添加 headers 配置项（目前为空数组）
- 修改 rewrites 规则，将 /api/httpbin-test/ 路径更改为 /api/simple-env-test
- 在 rewrites 目的地 URL 中使用 MY_TEST_VAR 环境变量
- 添加 cleanUrls 和 trailingSlash 配置项，优化 URL 格式

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,11 @@
 {
+  "headers": [  ],
   "rewrites": [
     {
-      "source": "/api/httpbin-test/:path*",
-      "destination": "https://httpbin.org/anything/test-path-segment/:path*?original_env=${ACTUAL_BACKEND_URL}"
+      "source": "/api/simple-env-test",
+      "destination": "https://httpbin.org/get?test_value=${MY_TEST_VAR}"
     }
-  ]
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
