build: 更新 Vercel 配置文件
- 移除空的 headers 数组
- 修改 API 重写规则，将其指向新的 CloudRun 服务
- 更新重写规则以支持动态路径匹配

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
-  "headers": [  ],
   "rewrites": [
     {
-      "source": "/api/simple-env-test",
-      "destination": "https://httpbin.org/get?test_value=${MY_TEST_VAR}"
+      "source": "/api/:match*",
+      "destination": "https://dywsuaqtibhj.ap-southeast-1.clawcloudrun.com/api/:match*"
     }
+    
   ],
   "cleanUrls": true,
   "trailingSlash": false
