ci: 更新 API 代理配置
- 将 API 代理 URL 修改为环境变量 ${BACKEND_API_BASE_URL}
- 删除多余的空行

--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,8 @@
   "rewrites": [
     {
       "source": "/api/:match*",
-      "destination": "https://dywsuaqtibhj.ap-southeast-1.clawcloudrun.com/api/:match*"
+      "destination": "${BACKEND_API_BASE_URL}/api/:match*"
     }
-    
   ],
   "cleanUrls": true,
   "trailingSlash": false
