--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "rewrites": [
     {
       "source": "/api/:match*",
-      "destination": "http://115.190.98.146:3000/api/:match*"
+      
+      "destination": "${BACKEND_API_BASE_URL}/api/:match*"
     }
     
   ],
