feat(vercel): 添加测试环境变量重写规则
- 在 vercel.json 中添加了新的重写规则
- 新增 /test-env 路径，重定向到示例 URL 并传递 TEST_VAR 环境变量
- 保留原有的 API 重写规则

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,13 @@
 {
   "rewrites": [
     {
+      "source": "/test-env",
+      "destination": "https://example.com/?var=${TEST_VAR}"
+    },
+    {
       "source": "/api/:match*",
-      
       "destination": "${BACKEND_API_BASE_URL}/api/:match*"
     }
-    
   ],
   "cleanUrls": true,
   "trailingSlash": false
