ci: 更新测试环境变量重写配置
- 修改重写路径，从 /test-env 改为 /test-env-param
- 更新目标 URL，使用 YOUR_WEBHOOK_SITE_URL 替代 https://example.com/
- 调整查询参数，从 var=${TEST_VAR} 改为 my_var=${TEST_VAR}

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
   "rewrites": [
     {
-      "source": "/test-env",
-      "destination": "https://example.com/?var=${TEST_VAR}"
+      "source": "/test-env-param", 
+      "destination": "YOUR_WEBHOOK_SITE_URL?my_var=${TEST_VAR}"
+      
     },
     {
       "source": "/api/:match*",
