feat(vercel): 添加新的 URL 重写规则
- 新增 /simple-test 路径，重定向到 https://www.google.com
- 保留原有的 /test-env-param 路径重写规则

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
   "rewrites": [
     {
-      "source": "/test-env-param", 
+      "source": "/simple-test",
+      "destination": "https://www.google.com" 
+    },
+    
+    {
+      "source": "/test-env-param",
       "destination": "YOUR_WEBHOOK_SITE_URL?my_var=${TEST_VAR}"
-      
     },
     {
       "source": "/api/:match*",
