refactor: 更新 test-env-param 的目标 URL
- 将模糊的 YOUR_WEBHOOK_SITE_URL 替换为具体的 https://webhook.site/455215db-e756-44bb-845f-660100f3113c
- 保留查询参数 my_var=${TEST_VAR}

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/test-env-param", 
-      "destination": "YOUR_WEBHOOK_SITE_URL?my_var=${TEST_VAR}"
-      
+      "source": "/test-env-param",
+      "destination": "https://webhook.site/455215db-e756-44bb-845f-660100f3113c?my_var=${TEST_VAR}"
     },
     {
       "source": "/api/:match*",
