--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/test-env-param",
-      "destination": "https://webhook.site/455215db-e756-44bb-845f-660100f3113c?my_var=${TEST_VAR}"
-    },
-    {
-      "source": "/api/:match*",
-      "destination": "${BACKEND_API_BASE_URL}/api/:match*"
+      "source": "/test-only",
+      "destination": "https://webhook.site/455215db-e756-44bb-845f-660100f3113c?var_from_env=${TEST_VAR}"
     }
-  ],
-  "cleanUrls": true,
-  "trailingSlash": false
+  ]
 }
