feat(api): 添加代理功能并更新相关配置
- 新增 api/proxy.js 文件实现请求代理功能
- 更新 config.js 中的 backendUrl 为 '/api/proxy'
- 修改 vercel.json，移除重写规则并添加 cleanUrls 和 trailingSlash 配置

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,4 @@
 {
-  "rewrites": [
-    {
-      "source": "/test-only",
-      "destination": "https://webhook.site/455215db-e756-44bb-845f-660100f3113c?var_from_env=${TEST_VAR}"
-    }
-  ]
+  "cleanUrls": true,
+  "trailingSlash": false
 }
