infrastructure: 更新后端 API 配置
- 将 config.js 中的 backendUrl 从具体的 IP 地址改为相对路径 '/api'
- 在 vercel.json 中添加具体的后端 API 地址

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     
     {
       "source": "/api/:match*",
-      "destination": "YOUR_BACKEND_API_BASE_URL/:match*" 
+      "destination": "http://115.190.98.146:3000/api/:match*"
     }
     
   ],
