refactor(api): 优化 MyGateway 函数并更新相关配置
- 移除了多余的 console.log 语句，简化了日志输出
- 在 API 响应中添加了时间戳，便于调试和日志记录
- 更新了 vercel.json 中的重写规则，提高了 URL 路由的灵活性

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
+
+
 {
   "rewrites": [
     {
-      "source": "/api/mygateway/:match*",
-      "destination": "/api/mygateway"
+      "source": "/api/mygateway/:path*",
+      "destination": "/api/mygateway"   
     }
-    
   ],
-  "cleanUrls": true, 
+  "cleanUrls": true,
   "trailingSlash": false
 }
